@@ -100,7 +100,7 @@ zope.structuredtext = 3.4
 zope.tal = 3.4.1
 zope.tales = 3.4
 zope.testbrowser = 3.4.2
-zope.testing = 3.5.1
+zope.testing = 3.6.0
 zope.thread = 3.4
 zope.traversing = 3.4.0
 zope.viewlet = 3.4.2
